gibbon-compiler/src/Gibbon/L2ParserNative/grammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from grammar.y
-----------------------------------------------------------------------------

state 0 contains 1 shift/reduce conflicts.
state 3 contains 1 shift/reduce conflicts.
state 23 contains 5 shift/reduce conflicts.
state 84 contains 1 shift/reduce conflicts.
state 109 contains 23 shift/reduce conflicts.
state 112 contains 23 shift/reduce conflicts.
state 113 contains 11 shift/reduce conflicts.
state 119 contains 1 shift/reduce conflicts.
state 125 contains 1 shift/reduce conflicts.
state 126 contains 1 shift/reduce conflicts.
state 127 contains 23 shift/reduce conflicts.
state 131 contains 23 shift/reduce conflicts.
state 134 contains 11 shift/reduce conflicts.
state 143 contains 1 shift/reduce conflicts.
state 153 contains 23 shift/reduce conflicts.
state 164 contains 23 shift/reduce conflicts.
state 176 contains 23 shift/reduce conflicts.

rule 88 is unused
rule 89 is unused
rule 90 is unused

terminal '--' is unused
terminal '`div`' is unused
terminal '`mod`' is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_l2ParserNative -> Program                   (0)
	Program -> DataTypeDecls FuncDecls MainExpr EOF    (1)
	MainExpr -> main '=' Expr                          (2)
	DataTypeDecl -> data TypeCon '=' DataFields        (3)
	DataField -> DataCon CombinedTypeCons              (4)
	CombinedTypeCon -> TypeCon                         (5)
	CombinedTypeCon -> BaseType                        (6)
	FuncDecl -> FuncVar FuncDeclRest                   (7)
	FuncDeclRest -> ':' TypeScheme '\n' FuncVar '[' LocRegions ']' Vars '=' Expr   (8)
	LocatedType -> CombinedLocType '@' LocRegion       (9)
	CombinedLocType -> TypeCon                         (10)
	CombinedLocType -> BaseType                        (11)
	TypeScheme -> CombinedTypes                        (12)
	CombinedType -> LocatedType                        (13)
	CombinedType -> BaseType                           (14)
	BaseType -> Int                                    (15)
	BaseType -> Float                                  (16)
	BaseType -> Bool                                   (17)
	BaseType -> String                                 (18)
	LocExpress -> '(' start RegionVar ')'              (19)
	LocExpress -> '(' LocRegion '+' INT_LIT ')'        (20)
	LocExpress -> '(' after LocatedType ')'            (21)
	LocRegion -> '(' LocVar ',' RegionVar ')'          (22)
	LocRegion -> '(' LocVar ',' RegionVar ',' IndexVar ')'   (23)
	Val -> Var                                         (24)
	Val -> Lit                                         (25)
	Lit -> INT_LIT                                     (26)
	Lit -> FLOAT_LIT                                   (27)
	Lit -> BOOL_LIT                                    (28)
	Lit -> STRING_LIT                                  (29)
	Expr -> Expr BinOp Expr                            (30)
	Expr -> Val                                        (31)
	Expr -> '(' Expr ')'                               (32)
	Expr -> ExprFuncApp                                (33)
	Expr -> ExprDataConApp                             (34)
	Expr -> ExprCase                                   (35)
	Expr -> ExprLet                                    (36)
	Expr -> ExprLetLoc                                 (37)
	Expr -> ExprLetRegion                              (38)
	ExprLetRegion -> letregion RegionVar in Expr       (39)
	ExprLetLoc -> letloc LocRegion '=' LocExpress in Expr   (40)
	ExprLet -> let Var ':' CombinedType '=' Expr in Expr   (41)
	ExprFuncApp -> FuncVar '[' LocRegions ']' Exprs    (42)
	ExprDataConApp -> DataCon LocRegion Exprs          (43)
	ExprCase -> case Val of Pats                       (44)
	Pat -> DataCon PatMatches '->' Expr                (45)
	PatMatch -> Val ':' LocatedType                    (46)
	BinOp -> '+'                                       (47)
	BinOp -> '-'                                       (48)
	BinOp -> '.+.'                                     (49)
	BinOp -> '.-.'                                     (50)
	BinOp -> '*'                                       (51)
	BinOp -> '/'                                       (52)
	BinOp -> '.*.'                                     (53)
	BinOp -> './.'                                     (54)
	BinOp -> '^'                                       (55)
	BinOp -> '=='                                      (56)
	BinOp -> '.==.'                                    (57)
	BinOp -> '*==*'                                    (58)
	BinOp -> '>'                                       (59)
	BinOp -> '<'                                       (60)
	BinOp -> '.>.'                                     (61)
	BinOp -> '.<.'                                     (62)
	BinOp -> '>='                                      (63)
	BinOp -> '<='                                      (64)
	BinOp -> '.>=.'                                    (65)
	BinOp -> '.<=.'                                    (66)
	BinOp -> '/='                                      (67)
	BinOp -> '&&'                                      (68)
	BinOp -> '||'                                      (69)
	FuncVar -> IDENT_LC                                (70)
	RegionVar -> IDENT_LC                              (71)
	LocVar -> IDENT_LC                                 (72)
	IndexVar -> IDENT_LC                               (73)
	TypeCon -> IDENT_UC                                (74)
	DataCon -> IDENT_UC                                (75)
	Var -> IDENT_LC                                    (76)
	Vars ->                                            (77)
	Vars -> Var                                        (78)
	Vars -> Vars Var                                   (79)
	DataFields ->                                      (80)
	DataFields -> DataField                            (81)
	DataFields -> DataFields '|' DataField             (82)
	CombinedTypeCons ->                                (83)
	CombinedTypeCons -> CombinedTypeCon                (84)
	CombinedTypeCons -> CombinedTypeCons CombinedTypeCon   (85)
	Exprs -> Expr                                      (86)
	Exprs -> Exprs Expr                                (87)
	Vals ->                                            (88)
	Vals -> Val                                        (89)
	Vals -> Vals Val                                   (90)
	Pats -> Pat                                        (91)
	Pats -> Pats Pat                                   (92)
	PatMatches ->                                      (93)
	PatMatches -> '(' PatMatch ')'                     (94)
	PatMatches -> PatMatches '(' PatMatch ')'          (95)
	DataTypeDecls ->                                   (96)
	DataTypeDecls -> DataTypeDecl '\n'                 (97)
	DataTypeDecls -> DataTypeDecls DataTypeDecl '\n'   (98)
	FuncDecls ->                                       (99)
	FuncDecls -> FuncDecl '\n'                         (100)
	FuncDecls -> FuncDecls FuncDecl '\n'               (101)
	LocRegions ->                                      (102)
	LocRegions -> LocRegion                            (103)
	LocRegions -> LocRegions LocRegion                 (104)
	CombinedTypes ->                                   (105)
	CombinedTypes -> CombinedType                      (106)
	CombinedTypes -> CombinedType '->' CombinedTypes   (107)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	data           { TokenData _ }
	'='            { TokenAssign _ }
	':'            { TokenColon _ }
	'['            { TokenLBracket _ }
	']'            { TokenRBracket _ }
	'@'            { TokenAt _ }
	'->'           { TokenArrow _ }
	'|'            { TokenBar _ }
	','            { TokenComma _ }
	'('            { TokenLParen _ }
	')'            { TokenRParen _ }
	'--'           { TokenComment _ }
	let            { TokenLet _ }
	in             { TokenIn _ }
	letloc         { TokenLetLoc _ }
	letregion      { TokenLetRegion _ }
	case           { TokenCase _ }
	of             { TokenOf _ }
	start          { TokenStart _ }
	after          { TokenAfter _ }
	'^'            { TokenPow _ }
	'*'            { TokenMul _ }
	'/'            { TokenDiv _ }
	'`div`'        { TokenDivInline _ }
	'`mod`'        { TokenModInline _ }
	'.*.'          { TokenFMul _ }
	'./.'          { TokenFDiv _ }
	'+'            { TokenAdd _ }
	'-'            { TokenSub _ }
	'.+.'          { TokenFAdd _ }
	'.-.'          { TokenFSub _ }
	'=='           { TokenEq _ }
	'.==.'         { TokenFEq _ }
	'*==*'         { TokenCEq _ }
	'>'            { TokenGt _ }
	'<'            { TokenLt _ }
	'.>.'          { TokenFGt _ }
	'.<.'          { TokenFLt _ }
	'>='           { TokenGe _ }
	'<='           { TokenLe _ }
	'.>=.'         { TokenFGe _ }
	'.<=.'         { TokenFLe _ }
	'/='           { TokenNeq _ }
	'&&'           { TokenAnd _ }
	'||'           { TokenOr _ }
	Int            { TokenIntType _ }
	Float          { TokenFloatType _ }
	Bool           { TokenBoolType _ }
	String         { TokenStringType _ }
	IDENT_LC       { TokenIdentLower _ $$ }
	IDENT_UC       { TokenIdentUpper _ $$ }
	INT_LIT        { TokenIntLit _ $$ }
	FLOAT_LIT      { TokenFloatLit _ $$ }
	BOOL_LIT       { TokenBoolLit _ $$ }
	STRING_LIT     { TokenStringLit _ $$ }
	main           { TokenMain _ }
	'\n'           { TokenNewLine _ }
	EOF            { TokenEOF _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_l2ParserNative rule  0
	Program         rule  1
	MainExpr        rule  2
	DataTypeDecl    rule  3
	DataField       rule  4
	CombinedTypeCon rules 5, 6
	FuncDecl        rule  7
	FuncDeclRest    rule  8
	LocatedType     rule  9
	CombinedLocType rules 10, 11
	TypeScheme      rule  12
	CombinedType    rules 13, 14
	BaseType        rules 15, 16, 17, 18
	LocExpress      rules 19, 20, 21
	LocRegion       rules 22, 23
	Val             rules 24, 25
	Lit             rules 26, 27, 28, 29
	Expr            rules 30, 31, 32, 33, 34, 35, 36, 37, 38
	ExprLetRegion   rule  39
	ExprLetLoc      rule  40
	ExprLet         rule  41
	ExprFuncApp     rule  42
	ExprDataConApp  rule  43
	ExprCase        rule  44
	Pat             rule  45
	PatMatch        rule  46
	BinOp           rules 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69
	FuncVar         rule  70
	RegionVar       rule  71
	LocVar          rule  72
	IndexVar        rule  73
	TypeCon         rule  74
	DataCon         rule  75
	Var             rule  76
	Vars            rules 77, 78, 79
	DataFields      rules 80, 81, 82
	CombinedTypeCons rules 83, 84, 85
	Exprs           rules 86, 87
	Vals            rules 88, 89, 90
	Pats            rules 91, 92
	PatMatches      rules 93, 94, 95
	DataTypeDecls   rules 96, 97, 98
	FuncDecls       rules 99, 100, 101
	LocRegions      rules 102, 103, 104
	CombinedTypes   rules 105, 106, 107

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_l2ParserNative -> . Program                  (rule 0)

	data           shift, and enter state 4
			(reduce using rule 96)

	IDENT_LC       reduce using rule 96
	main           reduce using rule 96

	Program        goto state 5
	DataTypeDecl   goto state 2
	DataTypeDecls  goto state 3

State 1

	Program -> . DataTypeDecls FuncDecls MainExpr EOF    (rule 1)

	data           shift, and enter state 4

	DataTypeDecl   goto state 2
	DataTypeDecls  goto state 3

State 2

	DataTypeDecls -> DataTypeDecl . '\n'                (rule 97)

	'\n'           shift, and enter state 13


State 3

	Program -> DataTypeDecls . FuncDecls MainExpr EOF    (rule 1)
	DataTypeDecls -> DataTypeDecls . DataTypeDecl '\n'    (rule 98)

	data           shift, and enter state 4
	IDENT_LC       shift, and enter state 12
			(reduce using rule 99)

	main           reduce using rule 99

	DataTypeDecl   goto state 8
	FuncDecl       goto state 9
	FuncVar        goto state 10
	FuncDecls      goto state 11

State 4

	DataTypeDecl -> data . TypeCon '=' DataFields       (rule 3)

	IDENT_UC       shift, and enter state 7

	TypeCon        goto state 6

State 5

	%start_l2ParserNative -> Program .                  (rule 0)

	%eof           accept


State 6

	DataTypeDecl -> data TypeCon . '=' DataFields       (rule 3)

	'='            shift, and enter state 21


State 7

	TypeCon -> IDENT_UC .                               (rule 74)

	'='            reduce using rule 74
	'@'            reduce using rule 74
	'|'            reduce using rule 74
	Int            reduce using rule 74
	Float          reduce using rule 74
	Bool           reduce using rule 74
	String         reduce using rule 74
	IDENT_UC       reduce using rule 74
	'\n'           reduce using rule 74


State 8

	DataTypeDecls -> DataTypeDecls DataTypeDecl . '\n'    (rule 98)

	'\n'           shift, and enter state 20


State 9

	FuncDecls -> FuncDecl . '\n'                        (rule 100)

	'\n'           shift, and enter state 19


State 10

	FuncDecl -> FuncVar . FuncDeclRest                  (rule 7)

	':'            shift, and enter state 18

	FuncDeclRest   goto state 17

State 11

	Program -> DataTypeDecls FuncDecls . MainExpr EOF    (rule 1)
	FuncDecls -> FuncDecls . FuncDecl '\n'              (rule 101)

	IDENT_LC       shift, and enter state 12
	main           shift, and enter state 16

	MainExpr       goto state 14
	FuncDecl       goto state 15
	FuncVar        goto state 10

State 12

	FuncVar -> IDENT_LC .                               (rule 70)

	':'            reduce using rule 70
	'['            reduce using rule 70


State 13

	DataTypeDecls -> DataTypeDecl '\n' .                (rule 97)

	data           reduce using rule 97
	IDENT_LC       reduce using rule 97
	main           reduce using rule 97


State 14

	Program -> DataTypeDecls FuncDecls MainExpr . EOF    (rule 1)

	EOF            shift, and enter state 39


State 15

	FuncDecls -> FuncDecls FuncDecl . '\n'              (rule 101)

	'\n'           shift, and enter state 38


State 16

	MainExpr -> main . '=' Expr                         (rule 2)

	'='            shift, and enter state 37


State 17

	FuncDecl -> FuncVar FuncDeclRest .                  (rule 7)

	'\n'           reduce using rule 7


State 18

	FuncDeclRest -> ':' . TypeScheme '\n' FuncVar '[' LocRegions ']' Vars '=' Expr    (rule 8)

	Int            shift, and enter state 33
	Float          shift, and enter state 34
	Bool           shift, and enter state 35
	String         shift, and enter state 36
	IDENT_UC       shift, and enter state 7
	'\n'           reduce using rule 105

	LocatedType    goto state 26
	CombinedLocTypegoto state 27
	TypeScheme     goto state 28
	CombinedType   goto state 29
	BaseType       goto state 30
	TypeCon        goto state 31
	CombinedTypes  goto state 32

State 19

	FuncDecls -> FuncDecl '\n' .                        (rule 100)

	IDENT_LC       reduce using rule 100
	main           reduce using rule 100


State 20

	DataTypeDecls -> DataTypeDecls DataTypeDecl '\n' .    (rule 98)

	data           reduce using rule 98
	IDENT_LC       reduce using rule 98
	main           reduce using rule 98


State 21

	DataTypeDecl -> data TypeCon '=' . DataFields       (rule 3)

	'|'            reduce using rule 80
	IDENT_UC       shift, and enter state 25
	'\n'           reduce using rule 80

	DataField      goto state 22
	DataCon        goto state 23
	DataFields     goto state 24

State 22

	DataFields -> DataField .                           (rule 81)

	'|'            reduce using rule 81
	'\n'           reduce using rule 81


State 23

	DataField -> DataCon . CombinedTypeCons             (rule 4)

	'|'            reduce using rule 83
	Int            shift, and enter state 33
			(reduce using rule 83)

	Float          shift, and enter state 34
			(reduce using rule 83)

	Bool           shift, and enter state 35
			(reduce using rule 83)

	String         shift, and enter state 36
			(reduce using rule 83)

	IDENT_UC       shift, and enter state 7
			(reduce using rule 83)

	'\n'           reduce using rule 83

	CombinedTypeCongoto state 66
	BaseType       goto state 67
	TypeCon        goto state 68
	CombinedTypeConsgoto state 69

State 24

	DataTypeDecl -> data TypeCon '=' DataFields .       (rule 3)
	DataFields -> DataFields . '|' DataField            (rule 82)

	'|'            shift, and enter state 65
	'\n'           reduce using rule 3


State 25

	DataCon -> IDENT_UC .                               (rule 75)

	'->'           reduce using rule 75
	'|'            reduce using rule 75
	'('            reduce using rule 75
	Int            reduce using rule 75
	Float          reduce using rule 75
	Bool           reduce using rule 75
	String         reduce using rule 75
	IDENT_UC       reduce using rule 75
	'\n'           reduce using rule 75


State 26

	CombinedType -> LocatedType .                       (rule 13)

	'='            reduce using rule 13
	'->'           reduce using rule 13
	'\n'           reduce using rule 13


State 27

	LocatedType -> CombinedLocType . '@' LocRegion      (rule 9)

	'@'            shift, and enter state 64


State 28

	FuncDeclRest -> ':' TypeScheme . '\n' FuncVar '[' LocRegions ']' Vars '=' Expr    (rule 8)

	'\n'           shift, and enter state 63


State 29

	CombinedTypes -> CombinedType .                     (rule 106)
	CombinedTypes -> CombinedType . '->' CombinedTypes    (rule 107)

	'->'           shift, and enter state 62
	'\n'           reduce using rule 106


State 30

	CombinedLocType -> BaseType .                       (rule 11)
	CombinedType -> BaseType .                          (rule 14)

	'='            reduce using rule 14
	'@'            reduce using rule 11
	'->'           reduce using rule 14
	'\n'           reduce using rule 14


State 31

	CombinedLocType -> TypeCon .                        (rule 10)

	'@'            reduce using rule 10


State 32

	TypeScheme -> CombinedTypes .                       (rule 12)

	'\n'           reduce using rule 12


State 33
